--- a/src/app/admin/login-page/login-page.component.html
+++ b/src/app/admin/login-page/login-page.component.html
@@ -1,1 +1,23 @@
-<p>login-page works!</p>
+<form [formGroup]="form" (ngSubmit)="submit()">
+
+  <h2>Login as administrator</h2>
+
+  <div class="form-control">
+    <label for="email">Email</label>
+    <input id="email" type="email" formControlName="email">
+    <div *ngIf="form.get('email').touched && form.get('email').invalid" class="validation">
+      <small *ngIf="form.get('email').errors.required">Введите e-mail</small>
+      <small *ngIf="form.get('email').errors.email">E-mail введен неправильно</small>
+    </div>
+  </div>
+  <div class="form-control">
+    <label for="password">Пароль</label>
+    <input id="password" type="password" formControlName="password">
+    <div *ngIf="form.get('password').touched && form.get('password').invalid" class="validation">
+      <small *ngIf="form.get('password').errors.required">Введите пароль</small>
+      <small *ngIf="form.get('password').errors.minlength">Пароль должен быть не менее {{form.get('password').errors.minlength.requiredLength}} символов.</small>
+    </div>
+  </div>
+
+  <button type="submit" class="btn btn-primary btn-block" [disabled]="form.invalid || submited">Войти</button>
+</form>
