--- a/src/app/admin/login-page/login-page.component.html
+++ b/src/app/admin/login-page/login-page.component.html
@@ -19,5 +19,5 @@
     </div>
   </div>
 
-  <button type="submit" class="btn btn-primary btn-block" [disabled]="form.invalid || submited">Войти</button>
+  <button type="submit" class="btn btn-primary btn-block" [disabled]="form.invalid || submitted">Войти</button>
 </form>
