--- a/src/app/admin/add-page/add-page.component.html
+++ b/src/app/admin/add-page/add-page.component.html
@@ -1,1 +1,42 @@
-<p>add-page works!</p>
+<form [formGroup]="form" (ngSubmit)="submit()">
+
+  <h2 class="text-center">Добавление товара</h2>
+
+  <div class="form-control">
+    <label for="type">Тип</label>
+    <select formControlName="type" >
+      <option value="russia">Россия</option>
+      <option value="portugal">Португалия</option>
+      <option value="spain">Испания</option>
+      <option value="bali">Бали</option>
+    </select>
+    <div *ngIf="form.get('type').touched && form.get('type').invalid" class="validation">
+      <small *ngIf="form.get('type').errors.required">Выберите тип товара</small>
+    </div>
+  </div>
+  <div class="form-control">
+    <label for="title">Название</label>
+    <input id="title" type="title" formControlName="title">
+    <div *ngIf="form.get('title').touched && form.get('title').invalid" class="validation">
+      <small *ngIf="form.get('title').errors.required">Введите имя продукта</small>
+    </div>
+  </div>
+  <div class="form-control">
+    <label for="photo">Фото</label>
+    <quill-editor formControlName="photo"></quill-editor>
+
+  </div>
+  <div class="form-control">
+    <label for="info">Информация</label>
+    <quill-editor formControlName="info"></quill-editor>
+  </div>
+  <div class="form-control">
+    <label for="price">Цена</label>
+    <input id="price" type="price" formControlName="price">
+    <div *ngIf="form.get('price').touched && form.get('price').invalid" class="validation">
+      <small *ngIf="form.get('price').errors.required">Введите цену товара</small>
+    </div>
+  </div>
+
+  <button type="submit" class="btn btn-primary btn-block" [disabled]="form.invalid || submitted">Добавить</button>
+</form>
