--- a/src/app/admin/dashboard-page/dashboard-page.component.html
+++ b/src/app/admin/dashboard-page/dashboard-page.component.html
@@ -1,1 +1,33 @@
-<p>dashboard-page works!</p>
+<div *ngIf="products.length; else loading">
+  <h2 class="text-center">Панель трипов</h2>
+  <table>
+    <thead>
+      <tr>
+        <td>Id</td>
+        <td>Name</td>
+        <td>Price</td>
+        <td>Date of creation</td>
+        <td>Open</td>
+        <td>Delete</td>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let product of products; let i = index">
+        <td>{{i+1}}</td>
+        <td>{{product.title}}</td>
+        <td>{{product.price}}</td>
+        <td>{{product.date}}</td>
+        <td>
+          <button class="btn btn-dark" [routerLink]="['/admin','product','product.id','edit']">Открыть</button>
+        </td>
+        <td>
+          <button class="btn btn-danger" (click)="remove(product.id)">Удалить</button>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+
+<ng-template #loading>
+  <p class="text-center">Загрузка...</p>
+</ng-template>
