--- a/src/app/admin/dashboard-page/dashboard-page.component.html
+++ b/src/app/admin/dashboard-page/dashboard-page.component.html
@@ -16,9 +16,9 @@
         <td>{{i+1}}</td>
         <td>{{product.title}}</td>
         <td>{{product.price}}</td>
-        <td>{{product.date}}</td>
+        <td>{{product.date | date: 'short'}}</td>
         <td>
-          <button class="btn btn-dark" [routerLink]="['/admin','product','product.id','edit']">Открыть</button>
+          <button class="btn btn-dark" [routerLink]="['/admin','product',product.id,'edit']">Открыть</button>
         </td>
         <td>
           <button class="btn btn-danger" (click)="remove(product.id)">Удалить</button>
