--- a/src/app/admin/dashboard-page/dashboard-page.component.html
+++ b/src/app/admin/dashboard-page/dashboard-page.component.html
@@ -1,5 +1,10 @@
 <div *ngIf="products.length; else loading">
   <h2 class="text-center">Панель трипов</h2>
+
+  <div class="form-control">
+    <input type="text" placeholder="Найти" [(ngModel)]="productName">
+  </div>
+
   <table>
     <thead>
       <tr>
@@ -12,7 +17,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let product of products; let i = index">
+      <tr *ngFor="let product of products | search: productName; let i = index">
         <td>{{i+1}}</td>
         <td>{{product.title}}</td>
         <td>{{product.price}}</td>
