--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="products$ | async as products" class="dashboard">
-  <app-product *ngFor="let product of products" class="box" [product]="product">
+  <app-product *ngFor="let product of products | sorting: productServ.type" class="box" [product]="product">
     {{product.title}}
   </app-product>
 </div>
