--- a/src/app/admin/dashboard-page/dashboard-page.component.html
+++ b/src/app/admin/dashboard-page/dashboard-page.component.html
@@ -8,12 +8,12 @@
   <table>
     <thead>
       <tr>
-        <td>Id</td>
-        <td>Name</td>
-        <td>Price</td>
-        <td>Date of creation</td>
-        <td>Open</td>
-        <td>Delete</td>
+        <th>Id</th>
+        <th>Name</th>
+        <th>Price</th>
+        <th>Date of creation</th>
+        <th>Open</th>
+        <th>Delete</th>
       </tr>
     </thead>
     <tbody>
