--- a/src/app/cart-page/cart-page.component.html
+++ b/src/app/cart-page/cart-page.component.html
@@ -16,6 +16,8 @@
   <b class="right">Всего: {{totalPrice}} р</b>
 
   <h2 class="text-center">Доставка:</h2>
+
+  <div *ngIf="added" class="text-center text-danger">{{added}}</div>
   <form [formGroup]="form" (ngSubmit)="submit()">
 
     <div class="form-control">
